--- a/scss/core/_navbar.scss
+++ b/scss/core/_navbar.scss
@@ -1,5 +1,5 @@
 .app-header.navbar {
-  position: relative;
+  position: fixed;
   flex-direction: row;
   height: $navbar-height;
   padding: 0;
@@ -35,6 +35,7 @@
     min-width: 50px;
     margin: 0 !important;
     text-align: center;
+      padding-left:30px;
 
     button {
       margin: 0 auto;
@@ -59,6 +60,9 @@
         margin: 0 10px;
       }
     }
+      &:first-child{
+          padding-left:80px
+      }
   }
 
   .dropdown-menu {
