--- a/scss/core/_variables.scss
+++ b/scss/core/_variables.scss
@@ -47,7 +47,7 @@ $navbar-border: (
 )  !default;
 $navbar-brand-width:                  155px !default;
 $navbar-brand-bg:                     #000 !default;
-$navbar-brand-logo:                   url('../img/logo.png') !default;
+$navbar-brand-logo:                   url('../img/logo-black.png') !default;
 $navbar-brand-logo-size:              50px auto !default;
 $navbar-brand-border: (
   bottom: (
